# manip_pro_ws

./: README.md
env_markers_pkg/: CMakeLists.txt  package.xml
env_markers_pkg/config/: segment_params.yaml  sphere.rviz  sphere_params.yaml
env_markers_pkg/launch/: segment_marker.launch  sphere_marker.launch
env_markers_pkg/src/: segment_marker_node.cpp  sphere_marker_node.cpp
open_manipulator_msgs/srv/: SetKinematicsPose.srv
open_manipulator_p/open_manipulator_p_controller/launch/: open_manipulator_p_controller.launch
open_manipulator_p/open_manipulator_p_controller/src/: open_manipulator_p_controller.cpp
open_manipulator_p/open_manipulator_p_description/launch/: open_manipulator_p_rviz.launch  open_manipulator_p_upload.launch
open_manipulator_p/open_manipulator_p_description/meshes/: cone.stl
open_manipulator_p/open_manipulator_p_description/rviz/: open_manipulator_p_with_flashlight.rviz
open_manipulator_p/open_manipulator_p_description/urdf/: open_manipulator_p_with_flashlight.urdf.xacro  open_manipulator_p_with_flashlight.urdsssf.xacro  open_manipulator_p_with_flashlight_robot.urdf.xacro
open_manipulator_p/open_manipulator_p_libs/src/: kinematics.cpp  open_manipulator_p.cpp
robotis_manipulator/include/robotis_manipulator/: robotis_manipulator.h  robotis_manipulator_manager.h
robotis_manipulator/src/robotis_manipulator/: robotis_manipulator.cpp
src/: visual_ik_request.yaml
src/environment_pkg/: CMakeLists.txt  package.xml
src/environment_pkg/config/: sphere_params.yaml
src/environment_pkg/src/: sphere_marker_node.cpp
(+25 files in other folders)
